[project]
name = 'RuEnTrainerBot'
version = '0.1.0'
description = 'Телеграмм бот для изучения английского'
requires-python = '>=3.12'
dependencies = [
    'psycopg[binary]==3.3.2',
    'aiogram==3.24.0',
    'asyncpg==0.31.0',
    'SQLAlchemy==2.0.45',
    'pydantic-settings==2.12.0',
    'structlog==25.5.0',
    'pytest>=8.0'
]